Studio Time Tracker: TellMe changes

--- a/Time Tracker/Sdl.Community.Studio.Time.Tracker.csproj
+++ b/Time Tracker/Sdl.Community.Studio.Time.Tracker.csproj
@@ -237,47 +237,47 @@
     <Compile Include="Tracking\TrackedEditorEvents.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Activities.ico" />
-    <Content Include="Resources\AddEvent.ico" />
-    <Content Include="Resources\Add.ico" />
-    <Content Include="Resources\Arrow-join-left.ico" />
-    <Content Include="Resources\Button-Check-blue.ico" />
-    <Content Include="Resources\Button-Cross-red.ico" />
-    <Content Include="Resources\Button-End-green.ico" />
-    <Content Include="Resources\Button-Pause-yellow.ico" />
-    <Content Include="Resources\Button-Stop-blue.ico" />
-    <Content Include="Resources\Chart-Bar-Document.ico" />
-    <Content Include="Resources\Excel.ico" />
-    <Content Include="Resources\Ms-Excel.ico" />
-    <Content Include="Resources\StartTimer.ico" />
-    <Content Include="Resources\StopTimer.ico" />
-    <Content Include="Resources\Book-Add.ico" />
-    <Content Include="Resources\Book-Delete.ico" />
-    <Content Include="Resources\Book-Edit.ico" />
-    <Content Include="Resources\Calendar-Add.ico" />
-    <Content Include="Resources\Calendar-Delete.ico" />
-    <Content Include="Resources\Calendar-Edit.ico" />
-    <Content Include="Resources\DataAdd.ico" />
-    <Content Include="Resources\Edit.ico" />
-    <Content Include="Resources\EditEvent.ico" />
-    <Content Include="Resources\Help.ico" />
-    <Content Include="Resources\Info.ico" />
-    <Content Include="Resources\Details.ico" />
-    <Content Include="Resources\Information.ico" />
-    <Content Include="Resources\MyDetails.ico" />
-    <Content Include="Resources\RemoveEvent.ico" />
-    <Content Include="Resources\Remove.ico" />
-    <Content Include="Resources\ReportAdd.ico" />
-    <Content Include="Resources\Sandclock.ico" />
-    <Content Include="Resources\Settings.ico" />
-    <Content Include="Resources\SymbolAdd.ico" />
-    <None Include="Resources\TellMe_Documentation.ico" />
-    <None Include="Resources\TellMe_Forum.ico" />
-    <None Include="Resources\TellMe_Settings.ico" />
-    <None Include="Resources\TellMe_SourceCode.ico" />
-    <Content Include="Resources\Timer.ico" />
-    <Content Include="Resources\Timetable.ico" />
-    <Content Include="Resources\Users-simple.ico" />
+    <Resource Include="Resources\Activities.ico" />
+    <Resource Include="Resources\AddEvent.ico" />
+    <Resource Include="Resources\Add.ico" />
+    <Resource Include="Resources\Arrow-join-left.ico" />
+    <Resource Include="Resources\Button-Check-blue.ico" />
+    <Resource Include="Resources\Button-Cross-red.ico" />
+    <Resource Include="Resources\Button-End-green.ico" />
+    <Resource Include="Resources\Button-Pause-yellow.ico" />
+    <Resource Include="Resources\Button-Stop-blue.ico" />
+    <Resource Include="Resources\Chart-Bar-Document.ico" />
+    <Resource Include="Resources\Excel.ico" />
+    <Resource Include="Resources\Ms-Excel.ico" />
+    <Resource Include="Resources\StartTimer.ico" />
+    <Resource Include="Resources\StopTimer.ico" />
+    <Resource Include="Resources\Book-Add.ico" />
+    <Resource Include="Resources\Book-Delete.ico" />
+    <Resource Include="Resources\Book-Edit.ico" />
+    <Resource Include="Resources\Calendar-Add.ico" />
+    <Resource Include="Resources\Calendar-Delete.ico" />
+    <Resource Include="Resources\Calendar-Edit.ico" />
+    <Resource Include="Resources\DataAdd.ico" />
+    <Resource Include="Resources\Edit.ico" />
+    <Resource Include="Resources\EditEvent.ico" />
+    <Resource Include="Resources\Help.ico" />
+    <Resource Include="Resources\Info.ico" />
+    <Resource Include="Resources\Details.ico" />
+    <Resource Include="Resources\Information.ico" />
+    <Resource Include="Resources\MyDetails.ico" />
+    <Resource Include="Resources\RemoveEvent.ico" />
+    <Resource Include="Resources\Remove.ico" />
+    <Resource Include="Resources\ReportAdd.ico" />
+    <Resource Include="Resources\Sandclock.ico" />
+    <Resource Include="Resources\Settings.ico" />
+    <Resource Include="Resources\SymbolAdd.ico" />
+    <Resource Include="Resources\TellMe_Documentation.ico" />
+    <Resource Include="Resources\TellMe_Forum.ico" />
+    <Resource Include="Resources\TellMe_Settings.ico" />
+    <Resource Include="Resources\TellMe_SourceCode.ico" />
+    <Resource Include="Resources\Timer.ico" />
+    <Resource Include="Resources\Timetable.ico" />
+    <Resource Include="Resources\Users-simple.ico" />
     <Resource Include="Resources\Information.png" />
     <Content Include="Studio.Time.Tracker.ico" />
     <EmbeddedResource Include="Dialogs\ExportActivitesToExcel.resx">
