--- a/CleanUpTasks/CleanUpTasks/Sdl.Community.CleanUpTasks.csproj
+++ b/CleanUpTasks/CleanUpTasks/Sdl.Community.CleanUpTasks.csproj
@@ -128,8 +128,11 @@
   </PropertyGroup>
   <PropertyGroup>
     <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta</TradosFolder>
+    <UseWPF>True</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+	  <Reference Include="PresentationCore" />
+	  <Reference Include="PresentationFramework" />
     <Reference Include="DocumentFormat.OpenXml">
       <HintPath>$(TradosFolder)\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
@@ -151,6 +154,9 @@
     </Reference>
     <Reference Include="Sdl.Desktop.IntegrationApi.Extensions">
       <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Sdl.Desktop.Platform.Styles">
+      <HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Styles.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.FileTypeSupport.Framework.Core.Utilities">
       <HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.Utilities.dll</HintPath>
@@ -192,6 +198,8 @@
       <RequiredTargetFramework>4.5.2</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xaml" />
+    <Reference Include="WindowsBase" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
@@ -312,6 +320,9 @@
     <Compile Include="TellMe\CleanUpTasksDocumentationAction.cs" />
     <Compile Include="TellMe\CleanUpTasksSupportAction.cs" />
     <Compile Include="TellMe\CleanUpTasksTellMeProvider.cs" />
+    <Compile Include="TellMe\View\WarningSettingsView.xaml.cs">
+      <DependentUpon>WarningSettingsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utilities\HtmlEntitizer.cs" />
     <Compile Include="Utilities\HtmlHelper.cs" />
     <Compile Include="Utilities\HtmlParser.cs" />
@@ -339,6 +350,7 @@
     <Compile Include="Utilities\ViewFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\Information.png" />
     <None Include="Resources\TellMe_SourceCode.ico" />
     <None Include="Resources\TellMe_Settings.ico" />
     <None Include="Resources\TellMe_Documentation.ico" />
@@ -406,6 +418,12 @@
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
       <Version>18.0.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="TellMe\View\WarningSettingsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
