--- a/Qualitivity/Sdl.Community.Qualitivity.TM/Sdl.Community.TM.csproj
+++ b/Qualitivity/Sdl.Community.Qualitivity.TM/Sdl.Community.TM.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
-    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Data.SQLite">
