--- a/DSI Viewer/Sdl.Community.SdiViewer/Sdl.Community.DsiViewer.csproj
+++ b/DSI Viewer/Sdl.Community.SdiViewer/Sdl.Community.DsiViewer.csproj
@@ -35,9 +35,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-	<PropertyGroup>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -131,6 +131,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Forum.ico" />
+    <None Include="Resources\TellMe_Forum.ico" />
+    <Resource Include="Resources\Information.png" />
     <Content Include="Resources\Settings.ico" />
     <Content Include="Resources\SourceCode.ico" />
     <Content Include="Resources\TellmeDocumentation.ico" />
@@ -139,7 +141,6 @@
     <Resource Include="Resources\Question.ico" />
     <Resource Include="Resources\ForumIcon.ico" />
     <Resource Include="Resources\error.png" />
-    <Resource Include="Resources\information.png" />
     <Resource Include="Resources\warning.png" />
     <EmbeddedResource Include="Resources\ds.ico" />
     <EmbeddedResource Include="PluginResources.resx">
@@ -176,7 +177,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
-      <Version>17.0.0</Version>
+      <Version>18.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
