--- a/TermExcelerator/Sdl.Community.TermExcelerator/Sdl.Community.TermExcelerator.csproj
+++ b/TermExcelerator/Sdl.Community.TermExcelerator/Sdl.Community.TermExcelerator.csproj
@@ -9,6 +9,7 @@
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
   <ItemGroup>
+	  <None Remove="Resources\Information.png" />
 	  <None Remove="Resources\Warning.png" />
 	</ItemGroup>
   <ItemGroup>
@@ -84,17 +85,18 @@
     <None Include="SdlCommunity.snk" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="4.5.3.3" />
-    <PackageReference Include="Microsoft.ApplicationInsights.WindowsServer" Version="2.21.0" />
+    <PackageReference Include="EPPlus" Version="7.2.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WindowsServer" Version="2.22.0" />
     <PackageReference Include="ObjectListView.Official" Version="2.9.1" />
     <PackageReference Include="Sdl.Core.PluginFramework">
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
-      <Version>17.0.0</Version>
+      <Version>18.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\Information.png" />
     <Resource Include="Resources\Warning.png" />
   </ItemGroup>
   <ItemGroup>
