--- a/StarTransit/Sdl.Community.StarTransit/Sdl.Community.StarTransit.csproj
+++ b/StarTransit/Sdl.Community.StarTransit/Sdl.Community.StarTransit.csproj
@@ -207,7 +207,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="TellMe\View\Warning.png" />
     <None Include="Resources\StarTransit.ico" />
     <None Include="Resources\TellmeDocumentation.ico" />
     <None Include="Resources\SourceCode.ico" />
@@ -226,6 +225,7 @@
     <Resource Include="Resources\open_package.ico" />
     <None Include="Resources\Question.ico" />
     <Resource Include="Resources\ProjectTemplates.ico" />
+    <Resource Include="Resources\Information.png" />
     <Content Include="Resources\return.ico" />
     <Resource Include="Resources\return_package.ico" />
     <None Include="Resources\opensourceimage.ico" />
@@ -250,7 +250,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
-      <Version>17.0.0</Version>
+      <Version>18.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
