--- a/SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher.csproj
+++ b/SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher/Sdl.Community.SegmentStatusSwitcher.csproj
@@ -115,7 +115,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="TellMe\View\Warning.png" />
     <None Include="Resources\Warning.png" />
     <None Include="Resources\Settings.ico" />
     <None Include="Resources\TellmeDocumentation.ico" />
@@ -130,6 +129,7 @@
     </Content>
     <Content Include="Resources\Download.ico" />
     <Content Include="Resources\ForumIcon.ico" />
+    <Resource Include="Resources\Information.png" />
     <Content Include="Resources\Question.ico" />
     <None Include="..\..\SdlCommunity.snk">
       <Link>SdlCommunity.snk</Link>
@@ -152,7 +152,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
-      <Version>17.0.0</Version>
+      <Version>18.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
