--- a/IATETerminologyProvider/IATETerminologyProvider/Sdl.Community.IATETerminologyProvider.csproj
+++ b/IATETerminologyProvider/IATETerminologyProvider/Sdl.Community.IATETerminologyProvider.csproj
@@ -161,7 +161,6 @@
     <Compile Include="IATEProviderTellMe\IATEDocumentationAction.cs" />
     <Compile Include="IATEProviderTellMe\IATECommunityForumAction.cs" />
     <Compile Include="IATEProviderTellMe\IATEContactAction.cs" />
-    <Compile Include="IATEProviderTellMe\IATEStoreAction.cs" />
     <Compile Include="IATEProviderTellMe\IATETellMeProvider.cs" />
     <Compile Include="IATETerminologyProviderAction.cs" />
     <Compile Include="IATETerminologyProviderWinFormsUI.cs" />
@@ -291,6 +290,9 @@
     <Content Include="pluginpackage.manifest.xml">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Resources\TellMe_Documentation.ico" />
+    <None Include="Resources\IATE-logo-cropped[1].ico" />
+    <None Include="Resources\IATE-logo-cropped[1].png" />
     <Resource Include="Resources\Forum.ico" />
     <Resource Include="Resources\Settings.ico" />
     <Resource Include="Resources\SourceCode.ico" />
@@ -326,13 +328,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Web.WebView2">
-      <Version>1.0.2151.40</Version>
+      <Version>1.0.2592.51</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework">
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
-      <Version>17.0.0</Version>
+      <Version>18.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
