Updated dynamic references to Trados Studio assemblies. Set UseShellExecute to false, which is required if the process should be created directly from the executable file.

--- a/SdlFreshstart/Sdl.Community.SdlFreshstart/Sdl.Community.SdlFreshstart.csproj
+++ b/SdlFreshstart/Sdl.Community.SdlFreshstart/Sdl.Community.SdlFreshstart.csproj
@@ -55,16 +55,19 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\SDL\SDL Trados Studio\Studio16\Newtonsoft.Json.dll')">$(MSBuildProgramFiles32)\SDL\SDL Trados Studio\Studio16\Newtonsoft.Json.dll</HintPath>
+      <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Newtonsoft.Json.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Newtonsoft.Json.dll</HintPath>
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta\Newtonsoft.Json.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio1Beta\Newtonsoft.Json.dll</HintPath>
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Newtonsoft.Json.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\SDL\SDL Trados Studio\Studio16\NLog.dll')">$(MSBuildProgramFiles32)\SDL\SDL Trados Studio\Studio16\NLog.dll</HintPath>
+      <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\NLog.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\NLog.dll</HintPath>
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta\NLog.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta\NLog.dll</HintPath>
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\NLog.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\NLog.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.Versioning">
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\SDL\SDL Trados Studio\Studio16\Sdl.Versioning.dll')">$(MSBuildProgramFiles32)\SDL\SDL Trados Studio\Studio16\Sdl.Versioning.dll</HintPath>
+      <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Versioning.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Versioning.dll</HintPath>
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta\Sdl.Versioning.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta\Sdl.Versioning.dll</HintPath>
       <HintPath Condition="Exists('$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.Versioning.dll')">$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.Versioning.dll</HintPath>
     </Reference>
