Qualitivity: Done with required changes

--- a/Qualitivity/Sdl.Community.Qualitivity/Sdl.Community.Qualitivity.csproj
+++ b/Qualitivity/Sdl.Community.Qualitivity/Sdl.Community.Qualitivity.csproj
@@ -23,7 +23,7 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18Beta\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
@@ -40,8 +40,12 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18Beta</TradosFolder>
+    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Resources\Information-32.png" />
+    <None Remove="Resources\Information.png" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
     <Reference Include="DocumentFormat.OpenXml">
@@ -159,6 +163,10 @@
     <PackageReference Include="Trados.Community.Toolkit.LanguagePlatform">
       <Version>5.0.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Information-32.png" />
+    <Resource Include="Resources\Information.png" />
   </ItemGroup>
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
