--- a/TMBackup/Sdl.Community.TMBackup/Sdl.Community.TMBackup.csproj
+++ b/TMBackup/Sdl.Community.TMBackup/Sdl.Community.TMBackup.csproj
@@ -142,6 +142,7 @@
     <Content Include="Resources\TMBackup_icon.ico" />
     <EmbeddedResource Include="TMBackupTasksForm.resx">
       <DependentUpon>TMBackupTasksForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Resources\TM_backup.png" />
     <Content Include="pluginpackage.manifest.xml" />
