--- a/SdlFreshstart/Sdl.Community.SdlFreshstart/Sdl.Community.SdlFreshstart.csproj
+++ b/SdlFreshstart/Sdl.Community.SdlFreshstart/Sdl.Community.SdlFreshstart.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Helpers\LocationsDescription.cs" />
     <Compile Include="Helpers\IRegistryHelper.cs" />
     <Compile Include="Helpers\RegistryHelper.cs" />
+    <Compile Include="Model\MultiTermInstalledVersion.cs" />
     <Compile Include="Model\MultitermVersion.cs" />
     <Compile Include="Services\IMessageService.cs" />
     <Compile Include="Model\IStudioVersion.cs" />
@@ -116,7 +117,8 @@
     <Compile Include="Helpers\Persistence.cs" />
     <Compile Include="Helpers\FileManager.cs" />
     <Compile Include="Model\StudioVersion.cs" />
-    <Compile Include="Services\VersionService.cs" />
+    <Compile Include="Services\MultiTermVersionService.cs" />
+    <Compile Include="Services\StudioVersionService.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -184,9 +186,6 @@
   <ItemGroup>
     <PackageReference Include="MahApps.Metro">
       <Version>1.5.0</Version>
-    </PackageReference>
-    <PackageReference Include="Trados.Community.Toolkit.Core">
-      <Version>5.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
